--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "DEBUG=app nodemon app.js",
+    "lint": "eslint app.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,9 +14,24 @@
     "bootstrap": "^4.3.1",
     "chalk": "^2.4.2",
     "debug": "^4.1.1",
+    "eslint": "^5.14.1",
     "express": "^4.16.4",
     "jquery": "^3.3.1",
     "morgan": "^1.9.1",
+    "nodemon": "^1.18.10",
     "popper": "^1.0.1"
+  },
+  "devDependencies": {
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.16.0"
+  },
+  "nodemonConfig": {
+    "restartable": "rs",
+    "ignore": ["node_modules/**/node_modules"],
+    "delay": "2500",
+    "env": {
+      "NODE_ENV": "development",
+      "PORT": 4000
+    }
   }
 }
