--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "jquery": "^3.3.1",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.10",
-    "popper": "^1.0.1"
+    "popper": "^1.0.1",
+    "pug": "^2.0.3"
   },
   "devDependencies": {
     "eslint-config-airbnb-base": "^13.1.0",
@@ -27,7 +28,9 @@
   },
   "nodemonConfig": {
     "restartable": "rs",
-    "ignore": ["node_modules/**/node_modules"],
+    "ignore": [
+      "node_modules/**/node_modules"
+    ],
     "delay": "2500",
     "env": {
       "NODE_ENV": "development",
