--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "DEBUG=app nodemon app.js",
+    "start": "DEBUG=app:* nodemon app.js",
     "lint": "eslint app.js"
   },
   "author": "",
@@ -19,6 +19,7 @@
     "express": "^4.16.4",
     "jquery": "^3.3.1",
     "morgan": "^1.9.1",
+    "mssql": "^4.3.2",
     "nodemon": "^1.18.10",
     "popper": "^1.0.1",
     "pug": "^2.0.3"
