--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^5.14.1",
     "express": "^4.16.4",
     "jquery": "^3.3.1",
+    "mongodb": "^3.1.13",
     "morgan": "^1.9.1",
     "mssql": "^4.3.2",
     "nodemon": "^1.18.10",
