--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "DEBUG=app,app:* nodemon app.js",
+    "start": "DEBUG=app, app:* nodemon app.js",
     "lint": "eslint app.js"
   },
   "author": "",
@@ -14,15 +14,19 @@
     "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
     "chalk": "^2.4.2",
+    "cookie-parser": "^1.4.4",
     "debug": "^4.1.1",
     "ejs": "^2.6.1",
     "eslint": "^5.14.1",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "jquery": "^3.3.1",
     "mongodb": "^3.1.13",
     "morgan": "^1.9.1",
     "mssql": "^4.3.2",
     "nodemon": "^1.18.10",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "popper": "^1.0.1",
     "pug": "^2.0.3"
   },
