--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
     "chalk": "^2.4.2",
@@ -28,7 +29,8 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "popper": "^1.0.1",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "xml2js": "^0.4.19"
   },
   "devDependencies": {
     "eslint-config-airbnb-base": "^13.1.0",
